--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -72,6 +72,14 @@ $mobile: 600px;
     -webkit-box-orient: vertical;
 }
 
+@mixin text-overflow-1 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+
 @mixin font-mono {
     font-family: "Fira Code", monospace;
 }
