--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -89,7 +89,7 @@
     --mono-400: #686868;
     --mono-300: #5d5d5d;
     --mono-200: #3b3b3b;
-    --mono-100: #2a2a2a;
+    --mono-100: #3b3b3b;
 
     --orange: #ffa500;
     --orange-text: #ffa500;
@@ -233,6 +233,13 @@ pre.json {
 
 ::-webkit-scrollbar-corner {
     background-color: transparent;
+}
+
+[id] {
+    scroll-margin-top: 100px;
+    @media screen and (max-width: $mobile) {
+        scroll-margin-top: 120px;
+    }
 }
 
 a.btn,
@@ -530,11 +537,12 @@ table {
     width: 100%;
     table-layout: auto;
     border-collapse: separate;
-    background-color: $bg-p;
     border-spacing: 0;
     color: var(--main);
+    background-color: var(--table__outsideBackground-color);
     --table__border-color: var(--mono-100);
     --table__background-color: #f4f6f6;
+    --table__outsideBackground-color: var(--bg-p);
     &.light {
         --table__background-color: #f4f6f6;
         --table__border-color: var(--mono-100);
@@ -609,6 +617,7 @@ table {
     }
 
     td {
+        background-color: var(--bg-p);
         border-bottom: 1px solid var(--table__border-color);
         &:first-child {
             border-left: 1px solid var(--table__border-color);
@@ -673,20 +682,35 @@ table {
     }
 
     &.horizontal {
-        border-collapse: collapse;
-        tr {
+        th {
+            border-radius: 0;
+            text-align: left;
+            font-size: 0.875rem;
+            border-top: 0;
+        }
+        td {
+            border: 1px solid var(--table__border-color);
+            border-top: 0;
+            text-align: left;
+            font-size: 0.875rem;
+        }
+
+        tr:first-child {
             th {
-                border-radius: 0;
-                text-align: left;
-                padding: 0.5rem 0.5rem;
-                font-size: 0.875rem;
+                border-radius: 0.25rem 0 0 0;
+                border: 1px solid var(--table__border-color);
             }
             td {
-                border: 1px solid var(--mono-100);
-                text-align: left;
-                padding: 0.5rem 0.5rem;
-
-                font-size: 0.875rem;
+                border-top: 1px solid var(--table__border-color);
+                border-radius: 0 0.25rem 0 0;
+            }
+        }
+        tr:last-child {
+            th {
+                border-radius: 0 0 0 0.25rem;
+            }
+            td {
+                border-radius: 0 0 0.25rem 0;
             }
         }
     }
