--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -64,6 +64,14 @@ $mobile: 600px;
     -webkit-box-orient: vertical;
 }
 
+// @mixin text-overflow-1 {
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+//     display: -webkit-box;
+//     -webkit-line-clamp: 1;
+//     -webkit-box-orient: vertical;
+// }
+
 @mixin text-overflow-1 {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -72,11 +80,11 @@ $mobile: 600px;
     -webkit-box-orient: vertical;
 }
 
-@mixin text-overflow-1 {
+@mixin text-overflow-2 {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
