--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -878,6 +878,7 @@ table {
         grid-template-columns: 1fr 1fr;
         gap: 0.5rem;
         padding-block: 1rem;
+        width: 100%;
 
         &.single {
             grid-template-columns: 1fr !important;
@@ -889,17 +890,17 @@ table {
             display: flex;
             flex-direction: column;
         }
-        .img-container {
-            height: 300px;
-            width: 100%;
-            overflow: hidden;
-            border-radius: 0.25rem;
-        }
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: all 1s;
-        }
+    }
+    .img-container {
+        height: 300px;
+        width: 100%;
+        overflow: hidden;
+        border-radius: 0.25rem;
+    }
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        transition: all 1s;
     }
 }
