added downloads page, added beta role

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -245,7 +245,7 @@ pre.json {
 a.btn,
 a.button,
 button {
-    height: 100%;
+    // height: 100%;
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-weight: 500;
