--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -891,16 +891,22 @@ table {
             flex-direction: column;
         }
     }
-    .img-container {
-        height: 300px;
-        width: 100%;
-        overflow: hidden;
-        border-radius: 0.25rem;
-    }
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        transition: all 1s;
-    }
+    // .img-container {
+    //     max-height: 450px;
+    //     width: 100%;
+    //     overflow: hidden;
+    //     border-radius: 0.25rem;
+    //     display: flex;
+    //     flex-direction: column;
+    //     span {
+    //         font-size: 14px;
+    //         text-align: center;
+    //     }
+    // }
+    // img {
+    //     width: 100%;
+    //     max-height: 450px;
+    //     object-fit: contain;
+    //     transition: all 1s;
+    // }
 }
