--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -762,8 +762,15 @@ table {
     }
 }
 
-.select__container > .select {
-    border-color: var(--mono-200) !important;
+.select__container {
+    .select {
+        border-color: var(--mono-200) !important;
+    }
+}
+body.light {
+    .items_container > .item.selected {
+        background-color: color-mix(in srgb, var(--accent-400) 50%, transparent) !important;
+    }
 }
 
 .modal_background {
@@ -909,4 +916,31 @@ table {
     //     object-fit: contain;
     //     transition: all 1s;
     // }
+}
+
+.flex {
+    display: flex;
+
+    &.justify-between {
+        justify-content: space-between;
+    }
+
+    &.flex-col {
+        flex-direction: column;
+    }
+    &.gap-1 {
+        gap: 0.25rem;
+    }
+    &.gap-2 {
+        gap: 0.5rem;
+    }
+    &.gap-3 {
+        gap: 0.75rem;
+    }
+    &.gap-4 {
+        gap: 1rem;
+    }
+    &.items-center {
+        align-items: center;
+    }
 }
