--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -875,6 +875,7 @@ body.light {
             background-color: white;
             border-radius: 0.25rem;
             margin-inline: auto;
+            width: 100%;
         }
         .caption {
             font-size: 0.875rem;
