--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -136,8 +136,8 @@
     --muted: #c9d2da;
     --red: #e9686a;
     --green: #38ae48;
-    --orange: rgb(255, 165, 0);
-    --orange-text: rgb(232, 158, 21);
+    --orange: #ffa500;
+    --orange-text: #e89e15;
 
     --mono: #7f7f7f;
     --mono-100: #e0e0e0;
@@ -274,7 +274,7 @@ button {
     }
 
     &:focus-visible {
-        outline: 2px solid var(--mono-200) !important;
+        outline: 4px solid var(--mono-200) !important;
     }
 
     &:disabled {
@@ -294,6 +294,7 @@ button {
         color: $main-alt;
 
         transition: outline 0.15s;
+
         &:hover {
             box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.12);
         }
